# SearchFlow

./: .bumpversion.cfg  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: pypy-and-dockerhub.yml  pypy-release.yml  version-bump.yml
docker-files/: docker-compose.yml
examples/: asking_questions.ipynb  data_crawling.ipynb  demo.ipynb  gemma_fine_tuning.ipynb  langchain_q&a_citations.ipynb  langchain_q&a_quickstart.ipynb  langchain_quickstart.ipynb  langchain_sitemap_scrape.ipynb  llama3_fine_tuning.ipynb  rag_chain.ipynb  setup.ipynb  site_crawl_processing.ipynb
examples/database/: managing_settings.ipynb
examples/fine-tuning/: gemma_fine_tuning.ipynb  llama3_fine_tuning.ipynb
examples/graphs/: advanced_rag_flow.ipynb  basic_rag_flow.ipynb  chatexecuter.ipynb  corrective_rag.ipynb  streaming_tokens.ipynb
examples/importers/: o365_token.txt  onedrive_importer.ipynb  pdf_importer.ipynb  scraper_settings.cfg  web_importer.ipynb
examples/rag/: langgraph_agent.ipynb
src/paginx/: __init__.py  main.py  paginx.py  serve.py
src/paginx/db/: chroma.py  postgresql.py  retrievers.py  vector_retriever.py
src/paginx/graphs/: basic_rag.py  vectrix.py
src/paginx/ner/: extract.py
src/paginx/ner/models/: entities.py
src/paginx/page_crawler/: crawler.py  web_chunker.py
src/paginx/page_crawler/models/: site_pages.py
src/searchflow/: __init__.py  api.py
src/searchflow/connectors/: onedrive.py
src/searchflow/db/: __init__.py  classes.py  postgresql.py  tables.py
src/searchflow/extract/: __init__.py  extraction.py
src/searchflow/graphs/: graph.py  old_graph.py
src/searchflow/graphs/utils/: nodes.py  prompts.py  state.py
src/searchflow/importers/: __init__.py  chrome.py  chunkdata.py  extraction.py  unstructured.py  webscraper.py
src/searchflow/models/: __init__.py  documents.py
src/searchflow/ner/: extract.py
src/searchflow/streaming/: processor.py
src/streamlit_app/: RAGWorkflowRunner.py  __init__.py  about.py  add_data.py  app.py  chat.py  main.py  manage_projects.py  manage_sources.py  scrape_data.py  upload_files.py  view_sources.py
src/streamlit_app/methods/: RAGWorkflowRunner.py
src/vectrix/: __init__.py  api.py  logger.py  main.py  serve.py
src/vectrix/connectors/: onedrive.py
src/vectrix/db/: __init__.py  classes.py  postgresql.py  weaviate.py
src/vectrix/graphs/: __init__.py  basic_rag.py  demo.py  graph.py  old_graph.py  vectrix_advanced.py
src/vectrix/graphs/utils/: nodes.py
src/vectrix/importers/: __init__.py  chrome.py  chunkdata.py  unstructured.py  web.py  webscraper.py
src/vectrix/llm/: llm.py
src/vectrix/loaders/: document.py
src/vectrix/models/: documents.py
src/vectrix/ner/: extract.py
src/vectrix/page_crawler/: crawler.py  web_chunker.py
src/vectrix/streaming/: processor.py
supabase/: config.toml
tests/: test_webscraper.py
