[tool.poetry]
name = "vectrix"
version = "0.0.65"
description = "An assistant helping you to index webpages into structured datasets."
authors = ["Ben Selleslagh <ben@dataframe.be>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "vectrix", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
protobuf = "^4.21.6"
validators = "^0.28.1"
trafilatura = "^1.9.0"
langchain-cohere = "*"
fake-useragent = "^1.5.1"
langchain = "^0.2.7"
langchain-postgres = "^0.0.9"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.14"
langchain-community = "^0.2.7"
langgraph = "^0.2.14"
langgraph-cli = "^0.1.48"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
psycopg-binary = "^3.2.1"
poppler-utils = "^0.1.0"
o365 = "^2.0.36"
psycopg2-binary = "^2.9.9"
colorlog = "^6.8.2"
streamlit = "^1.36.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
supabase = "^2.7.2"
unstructured-client = "^0.25.5"
unstructured = {extras = ["all-docs"], version = "^0.15.7"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
bump2version = "^1.0.1"
langchainhub = "^0.1.20"
python-fasthtml = "^0.3.4"
unstructured = {extras = ["all-docs"], version = "^0.15.7"}
pytest = "^8.3.2"
pre-commit = "^3.8.0"

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
